# klipper

./: .gitignore  .gitmodules  3d_printer_llm_prompt.md  =1.9.0  Cargo.toml  Makefile  _test_.gcode  _test_output  dataset.jsonl
.cargo/: config.toml
.github/instructions/: copilot-instructions.md
dict/: hostsimulator.dict  linuxprocess.dict  pru.dict  rp2040.dict  stm32f407.dict
docs/: Bed_Mesh.md  Config_Reference.md  Delta_Calibrate.md
klipper-rs/klippy/: clocksync.rs  configfile.rs  console.rs  gcode.rs  klippy.rs  mathutil.rs  mcu.rs  mod.rs  msgproto.rs  parsedump.rs  pins.rs  queuelogger.rs  reactor.rs  serialhdl.rs  stepper.rs  test_rust_util.rs  toolhead.rs  util.rs  webhooks.rs
klipper-rs/klippy/chelper/: mod.rs
klipper-rs/klippy/extras/: ad5206.rs  adc_scaled.rs  adc_temperature.rs  ads1220.rs  ads1x1x.rs  adxl345.rs  aht10.rs  angle.rs  axis_twist_compensation.rs  bed_mesh.rs  bed_screws.rs  bed_tilt.rs  bltouch.rs  bme280.rs  board_pins.rs  bulk_sensor.rs  bus.rs  buttons.rs  canbus_ids.rs  canbus_stats.rs  controller_fan.rs  dac084S085.rs  delayed_gcode.rs  delta_calibrate.rs  display_status.rs  dotstar.rs  ds18b20.rs  duplicate_pin_override.rs  endstop_phase.rs  error_mcu.rs  exclude_object.rs  extruder_stepper.rs  fan.rs  fan_generic.rs  filament_motion_sensor.rs  filament_switch_sensor.rs  firmware_retraction.rs  force_move.rs  garbage_collection.rs  gcode_arcs.rs  (+31 more)
klipper-rs/klippy/extras/display/: display.rs  mod.rs
klipper-rs/klippy/kinematics/: cartesian.rs  corexy.rs  corexz.rs  delta.rs  deltesian.rs  extruder.rs  mod.rs
klipper-rs/scripts/: avrsim.rs  buildcommands.rs  calibrate_shaper.rs  canbus_query.rs  checkstack.rs  mod.rs  stepstats.rs  test_klippy.rs  update_chitu.rs  update_mks_robin.rs  whconsole.rs
klipper-rs/scripts/motan/: mod.rs
klipper-rs/scripts/spi_flash/: board_defs.rs  fatfs_api.rs  fatfs_api_h.rs  fatfs_lib.rs  mod.rs  spi_flash.rs
klipper_host_rust/: Cargo.toml
klipper_host_rust/src/: clocksync.rs  configfile.rs  console.rs  core_traits.rs  gcode.rs  heaters.rs  klippy_main.rs  lib.rs  mathutil.rs  mcu.rs  msgproto.rs  pins.rs  reactor.rs  serialhdl.rs  stepper.rs  test_utils.rs  toolhead.rs  trapq.rs  util.rs  webhooks.rs
klipper_host_rust/src/extras/: bed_mesh.rs  buttons.rs  fan.rs  mod.rs  probe.rs
klipper_host_rust/src/extras/display/: display.rs  mod.rs
klipper_host_rust/src/kinematics/: cartesian.rs  corexy.rs  delta.rs  extruder.rs  mod.rs
klipper_rust/: Cargo.toml
klipper_rust/src/: main.rs  util.rs
klipper_rust_port/: .gitignore  Cargo.toml  build.rs  klipper_rust_port.h  test_c_crc
klipper_rust_port/src/: itersolve.rs  lib.rs  stepcompress.rs  trapq.rs
klippy/: klippy.py  test_rust_util.py  util.py
klippy-rust/: Cargo.toml
klippy-rust/src/: itersolve.rs  lib.rs  main.rs  mcu.rs  pins.rs  stepcompress.rs  toolhead.rs  trapq.rs  webhooks.rs
klippy-rust/src/kinematics/: cartesian.rs  extruder.rs  mod.rs
klippy-rust/src/tests/: mod.rs  toolhead.rs
klippy-rust/tests/: test_printer.rs  test_toolhead.rs  test_trapq.rs  test_webhooks.rs
klippy/chelper/: __init__.py  atmega2560.dict  itersolve.c  kin_delta.c  linux.dict
klippy/extras/: bed_mesh.py  delta_calibrate.py  probe.py
klippy/kinematics/: delta.py
scripts/: buildcommands.py  klippy-requirements.txt  test_klippy.py
src/: Cargo.toml  board_pins.rs  command.c  command.rs  command_parser.rs  endstop.rs  gcode.rs  gpio_manager.rs  hal.rs  itersolve.rs  lib.rs  main.rs  mcu.rs  move_queue.rs  rp2040_hal_impl.rs  sched.rs  shaper.rs  stepcompress.rs  stepper.rs  tmc2209.rs  toolhead.rs  trapq.rs  utils.rs
src/ar100/: Makefile
src/atsam/: Makefile
src/atsamd/: Makefile
src/generic/: gpio.h  misc.h
src/hc32f460/: Makefile
src/kinematics/: cartesian.rs  mod.rs
src/linux/: Makefile  gpio.h
src/lpc176x/: Makefile
src/pru/: Makefile
src/rp2040/: Makefile
src/rp2040_hal_impl/: gpio.rs  mod.rs  pwm.rs  spi.rs  timer.rs  uart.rs
src/simulator/: Makefile
src/stm32/: Makefile
test/configs/: atmega2560.config
test/klippy/: delta.test  delta_calibrate.cfg  delta_calibrate.test  delta_lean.cfg  delta_lean.gcode  delta_lean.test
