[workspace]
resolver = "2"
members = [ "klipper_host_rust",
    "klipper_rust",      # Host-side utilities
    "src",               # Firmware crate (klipper_mcu_rust)
]

# Optional: Common workspace-level settings can go here, for example:
# [profile.release]
# codegen-units = 1
# lto = true
# opt-level = "z" # Optimize for size
# strip = true
# panic = "abort"
