[package]
name = "klipper_host_rust"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "alloc"] # Added "alloc" to default features
std = []
alloc = []

[dependencies]
float-cmp = "0.9"
log = "0.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heapless = "0.7"
