[package]
name = "klipper_host_rust"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "alloc"] # Added "alloc" to default features
std = []
alloc = []

[dependencies]
float-cmp = "*"
log = "*"
parking_lot = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
heapless = "*"
