[package]
name = "klipper_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] } # PyO3 might not be needed if only building a binary
signal-hook = "0.3"
nix = { version = "0.27.1", features = ["fs", "term"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4" # For formatting timestamps

[[bin]]
name = "klipper_rust_bin"
path = "src/main.rs"
