[package]
name = "klipper_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# pyo3 removed
# signal-hook removed
# nix removed
# libc removed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4" # For formatting timestamps

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "klipper_rust_bin"
path = "src/main.rs"
